# mujoco_ros

./: MUJOCO_LOG.TXT  mujoco_ros.files  mujoco_ros.includes  scipy.signal  torque_collision_error.txt
devel/: .catkin
devel/include/robot_msgs/: ik.h  omega.h
devel/lib/master_driver/: omega_driver_node
devel/lib/omega7_drive/: omega_driver  omega_dual  omega_single  read_pose
devel/lib/pkgconfig/: master_driver.pc  mujoco_driver.pc  omega7_drive.pc  robot_description.pc  robot_drive.pc  robot_gezabo.pc  robot_inverse_kinematic.pc  robot_msgs.pc
devel/lib/robot_drive/: robot_drive_node
devel/lib/robot_inverse_kinematic/: read  read_node  write  write_node
mat/: 4
mat/collector_v1/: 1  sim  １  ２
mat/collector_v2/3/: predict_data
ref/: jitterbug_mujoco.xml
ref/PR2/: pr2.xml  pr2_arm.xml
ref/UR5+gripper/: UR5gripper.xml
ref/barrett/: wam_7dof_wam_bhand.xml
ref/baxter/: baxter.xml
src/master_driver/: CMakeLists.txt
src/master_driver/config/: dual_robot_param.yaml  single_robot_param.yaml
src/master_driver/launch/: omega_dual_robot.launch  omega_single_robot.launch
src/master_driver/src/: omega_driver.cpp  omega_driver_two.cpp
src/mujoco_description/: hello.xml  robot.xml  robot_dual.xml  robot_grasp.xml  robot_ver2.xml  robot_ver2_dual.xml  robot_ver2_single.xml
src/mujoco_description/back/: robot_ver2_dual.xml
src/mujoco_description/meshes/: circle.stl  roll1.stl  roll2.stl
src/mujoco_description/xml_version_1/: robot.xml  robot_dual.xml  robot_grasp.xml
src/mujoco_driver/: CMakeLists.txt  package.xml
src/mujoco_driver/scripts/: mujoco.py  mujoco.py.autosave  mujoco_dual.py  mujoco_grasp.py  mujoco_ver1_single.py  mujoco_ver2.py  (+3 more)
src/omega7_drive/: CMakeLists.txt
src/omega7_drive/launch/: read_pose_dual.launch  read_pose_single.launch
src/omega7_drive/src/: omega_driver_single.cpp  read_pose.cpp
src/robot_description/: CMakeLists.txt  robot_ver1_mujoco.xml
src/robot_gezabo/: CMakeLists.txt  package.xml
src/robot_inverse_kinematic/: CMakeLists.txt
src/robot_inverse_kinematic/include/: robot_inverse.h  robot_inverse_ver1.h
src/robot_inverse_kinematic/src/: read.cpp  robot_inverse.cpp  robot_inverse_dual.cpp  robot_inverse_single.cpp  robot_inverse_single_ver1.cpp  write.cpp
(+66 files in other folders)
